force-app/main/default/objects/shc__SHCAlertConfig__c/shc__SHCAlertConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SHCAlertConfig</label>
</CustomObject>