force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__ActiveChangeAlert__c.field-meta.xml
<CustomField>
    <fullName>shc__ActiveChangeAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Alerts will be sent when users&apos; active status changes.</description>
    <label>ActiveChangeAlert</label>
    <type>Checkbox</type>
</CustomField>