force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__ActiveUserChangeAlertDelay__c.field-meta.xml
<CustomField>
    <fullName>shc__ActiveUserChangeAlertDelay__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Delay before alerts are sent</description>
    <label>ActiveUserChangeAlertDelay</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>