force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__AdminChangeAlert__c.field-meta.xml
<CustomField>
    <fullName>shc__AdminChangeAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send alerts when users are made into administrators</description>
    <label>AdminChangeAlert</label>
    <type>Checkbox</type>
</CustomField>