force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__AdminEmailsAlert__c.field-meta.xml
<CustomField>
    <fullName>shc__AdminEmailsAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send alerts when users are added to the list of users to receive administrator newsletter emails.</description>
    <label>AdminEmailsAlert</label>
    <type>Checkbox</type>
</CustomField>