force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__AdminEmailsAlertDelay__c.field-meta.xml
<CustomField>
    <fullName>shc__AdminEmailsAlertDelay__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Delay before emails get sent.</description>
    <label>AdminEmailsAlertDelay</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>