force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__AlertRecipient__c.field-meta.xml
<CustomField>
    <fullName>shc__AlertRecipient__c</fullName>
    <description>Email address where the alert emails will be sent.</description>
    <inlineHelpText>Email address where the alert emails will be sent.</inlineHelpText>
    <label>AlertRecipient</label>
    <type>Email</type>
</CustomField>