force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__AlertSender__c.field-meta.xml
<CustomField>
    <fullName>shc__AlertSender__c</fullName>
    <description>Email of the user that the alert emails should be sent as.</description>
    <inlineHelpText>This value should be a valid OrgWideEmail address (Setup -&gt; Administration Setup -&gt; Email Administration -&gt; Organization-Wide Addresses)</inlineHelpText>
    <label>AlertSender</label>
    <type>Email</type>
</CustomField>