force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__DaysWorthOfData__c.field-meta.xml
<CustomField>
    <fullName>shc__DaysWorthOfData__c</fullName>
    <description>Number of days worth of data to send in the report.</description>
    <inlineHelpText>Number of days worth of data to send in the report.</inlineHelpText>
    <label>DaysWorthOfData</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>