force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__EmailChangeAlert__c.field-meta.xml
<CustomField>
    <fullName>shc__EmailChangeAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send alerts if a user tries to change their email.</description>
    <label>EmailChangeAlert</label>
    <type>Checkbox</type>
</CustomField>