force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__LastTimeReportCollected__c.field-meta.xml
<CustomField>
    <fullName>shc__LastTimeReportCollected__c</fullName>
    <description>The last time the report was collected.</description>
    <inlineHelpText>The last time the report was collected.</inlineHelpText>
    <label>LastTimeReportCollected</label>
    <type>DateTime</type>
</CustomField>