force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__MADAlert__c.field-meta.xml
<CustomField>
    <fullName>shc__MADAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send alerts when MAD status changes.</description>
    <label>MADAlert</label>
    <type>Checkbox</type>
</CustomField>