force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__MADAlertDelay__c.field-meta.xml
<CustomField>
    <fullName>shc__MADAlertDelay__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Delay before alerts get sent.</description>
    <label>MADAlertDelay</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>