force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__ReportRecipient__c.field-meta.xml
<CustomField>
    <fullName>shc__ReportRecipient__c</fullName>
    <description>Email address where the report emails will be sent.</description>
    <inlineHelpText>Email address where the report emails will be sent.</inlineHelpText>
    <label>ReportRecipient</label>
    <type>Email</type>
</CustomField>