force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__RunEveryDays__c.field-meta.xml
<CustomField>
    <fullName>shc__RunEveryDays__c</fullName>
    <description>Report emails will be sent every N days.</description>
    <inlineHelpText>Report emails will be sent every N days.</inlineHelpText>
    <label>RunEveryDays</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>