force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__SendAlerts__c.field-meta.xml
<CustomField>
    <fullName>shc__SendAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not to send alert emails.</description>
    <label>SendAlerts</label>
    <type>Checkbox</type>
</CustomField>