force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__SendReports__c.field-meta.xml
<CustomField>
    <fullName>shc__SendReports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if summary report emails will be sent.</description>
    <inlineHelpText>Set to true if summary report emails will be sent.</inlineHelpText>
    <label>SendReports</label>
    <type>Checkbox</type>
</CustomField>