force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__VADAlert__c.field-meta.xml
<CustomField>
    <fullName>shc__VADAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send alerts if a user&apos;s VAD status changes.</description>
    <label>VADAlert</label>
    <type>Checkbox</type>
</CustomField>