force-app/main/default/objects/shc__SHCAlertConfig__c/fields/shc__VADAlertDelay__c.field-meta.xml
<CustomField>
    <fullName>shc__VADAlertDelay__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Delay before sending alert emails.</description>
    <label>VADAlertDelay</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>